email de verdad

--- a/Web2020/Web.config
+++ b/Web2020/Web.config
@@ -26,6 +26,7 @@
     <add key="servidor" value="smtp-relay.sendinblue.com" />
     <add key="puerto" value="587" />
     <add key="usuario" value="pantroazul@gmail.com" />
+	<add key="copia_email" value="pantroazul@gmail.com" />
     <add key="pass" value="qmj1tQF5ZrM6TvYN" />
     <add key="ssl" value="true" />
     <add key="autentificacion" value="True" />
