--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,14 @@
 /spxWeb/files
 /Web2020/.vs/Web2020
 /spxBo/Output/BoLayer/bin/Debug
+/Web2020/obj/Debug/Web2020.csproj.AssemblyReference.cache
+/Web2020/obj/Debug/Web2020.csproj.FileListAbsolute.txt
+/SupportTech X/SPControladoraDatos/obj/Debug/SPControladoraDatos.csproj.AssemblyReference.cache
+/SupportTech X/SPControladoraDatos/obj/Debug/SPControladoraDatos.csproj.FileListAbsolute.txt
+/SupportTech X/SPControladoraDatos/obj/Debug/SPControladoraDatos.g.resources
+/spxBo/Output/BoLayer/obj/Debug/BOLayer.csproj.AssemblyReference.cache
+/spxBo/Output/BoLayer/obj/Debug/BOLayer.csproj.CoreCompileInputs.cache
+/spxBo/Output/BoLayer/obj/Debug/BOLayer.csproj.FileListAbsolute.txt
+/spxBo/Output/BoLayer/obj/Debug/BOLayer.csproj.Up2Date
+/spxBo/Output/BoLayer/obj/Debug/BOLayer.dll
+/spxBo/Output/BoLayer/obj/Debug/BOLayer.pdb
