git ignore depuracion

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,11 @@
 /spxBo/Output/BoLayer/obj/Debug/BOLayer.csproj.Up2Date
 /spxBo/Output/BoLayer/obj/Debug/BOLayer.dll
 /spxBo/Output/BoLayer/obj/Debug/BOLayer.pdb
+/spxBussines/bin/Debug
+/spxBussines/bin/Release
+/spxBussines/obj
+/spxBo/Output/BoLayer/obj/Debug
+/spxWeb/Bin
+/SupportTech/obj/Debug
+/SupportTech X/SPControladoraDatos/obj
+/Web2020/obj
