--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,5 @@
 /SupportTech/obj/Debug
 /SupportTech X/SPControladoraDatos/obj
 /Web2020/obj
+/SupportTech X/SPControladoraDatos/bin/Debug
+/spxBussines/obj/Debug/spxBussines.csproj.AssemblyReference.cache
