--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,6 @@
 /Web2020/obj
 /SupportTech X/SPControladoraDatos/bin/Debug
 /spxBussines/obj/Debug/spxBussines.csproj.AssemblyReference.cache
+/spxBo/Output/BoLayer/.vs
+/spxBussines/.vs
+/Web2020/.vs
