web config e hibernate

--- a/Web2020/Web.config
+++ b/Web2020/Web.config
@@ -34,19 +34,19 @@
     <add key="ipsitio" value="http://localhost:51289/spxWeb/" />
   </appSettings>
 	<connectionStrings>
-		<!--<add name="spxConnectionString" connectionString="Data Source=181.206.7.48;Initial Catalog=spxReactivosValle;Persist Security Info=True;User ID=sa;Password=Reactivos*delvalle123" providerName="System.Data.SqlClient" />
+		<add name="spxConnectionString" connectionString="Data Source=181.206.7.48;Initial Catalog=spxReactivosValle;Persist Security Info=True;User ID=sa;Password=Reactivos*delvalle123" providerName="System.Data.SqlClient" />
 		<add name="SPControladoraDatos.Properties.Settings.SUPPORTECHConnectionString" connectionString="Data Source=181.206.7.48;Initial Catalog=spxReactivosValle;Persist Security Info=True;User ID=sa;Password=Reactivos*delvalle123" providerName="System.Data.SqlClient" />
 		<add name="SPControladoraDatos.Properties.Settings.supportechConnectionString1" connectionString="Data Source=181.206.7.48;Initial Catalog=spxReactivosValle;Persist Security Info=True;User ID=sa;Password=Reactivos*delvalle123" providerName="System.Data.SqlClient" />
 		<add name="SPControladoraDatos.Properties.Settings.wcg_coreConnectionString" connectionString="Data Source=181.206.7.48;Initial Catalog=spxReactivosValle;Persist Security Info=True;User ID=sa;Password=Reactivos*delvalle123" providerName="System.Data.SqlClient" />
 		<add name="spx2020ConnectionString" connectionString="Data Source=181.206.7.48;Initial Catalog=spxReactivosValle;User ID=sa;Password=Reactivos*delvalle123" providerName="System.Data.SqlClient" />
-		<add name="SUPPORTECHConnectionString" connectionString="Data Source=181.206.7.48;Initial Catalog=spxReactivosValle;User ID=sa;Password=Reactivos*delvalle123" providerName="System.Data.SqlClient" />-->
+		<add name="SUPPORTECHConnectionString" connectionString="Data Source=181.206.7.48;Initial Catalog=spxReactivosValle;User ID=sa;Password=Reactivos*delvalle123" providerName="System.Data.SqlClient" />
 
-    <add name="spxConnectionString" connectionString="Data Source=144.126.151.13,19889;Initial Catalog=spxReactivosVallefff;Persist Security Info=True;User ID=sa;Password=sElectra69l#2023" providerName="System.Data.SqlClient" />
+    <!--<add name="spxConnectionString" connectionString="Data Source=144.126.151.13,19889;Initial Catalog=spxReactivosVallefff;Persist Security Info=True;User ID=sa;Password=sElectra69l#2023" providerName="System.Data.SqlClient" />
     <add name="SPControladoraDatos.Properties.Settings.SUPPORTECHConnectionString" connectionString="Data Source=144.126.151.13,19889;Initial Catalog=spxReactivosVallefff;Persist Security Info=True;User ID=sa;Password=sElectra69l#2023" providerName="System.Data.SqlClient" />
     <add name="SPControladoraDatos.Properties.Settings.supportechConnectionString1" connectionString="Data Source=144.126.151.13,19889;Initial Catalog=spxReactivosVallefff;Persist Security Info=True;User ID=sa;Password=sElectra69l#2023" providerName="System.Data.SqlClient" />
     <add name="SPControladoraDatos.Properties.Settings.wcg_coreConnectionString" connectionString="Data Source=144.126.151.13,19889;Initial Catalog=spxReactivosVallefff;Persist Security Info=True;User ID=sa;Password=sElectra69l#2023" providerName="System.Data.SqlClient" />
     <add name="spx2020ConnectionString" connectionString="Data Source=144.126.151.13,19889;Initial Catalog=spxReactivosVallefff;User ID=sa;Password=sElectra69l#2023" providerName="System.Data.SqlClient" />
-    <add name="SUPPORTECHConnectionString" connectionString="Data Source=144.126.151.13,19889;Initial Catalog=spxReactivosVallefff;User ID=sa;Password=sElectra69l#2023" providerName="System.Data.SqlClient" />
+    <add name="SUPPORTECHConnectionString" connectionString="Data Source=144.126.151.13,19889;Initial Catalog=spxReactivosVallefff;User ID=sa;Password=sElectra69l#2023" providerName="System.Data.SqlClient" />-->
 
 		
 	</connectionStrings>
