--- a/Web2020/hibernate.config
+++ b/Web2020/hibernate.config
@@ -4,8 +4,8 @@
     <property name='proxyfactory.factory_class'>NHibernate.ByteCode.Castle.ProxyFactoryFactory, NHibernate.ByteCode.Castle</property>
     <property name="connection.provider">NHibernate.Connection.DriverConnectionProvider</property>
     <property name="connection.driver_class">NHibernate.Driver.SqlClientDriver</property>
-    <!--<property name="connection.connection_string">data source=181.206.7.48; initial catalog=spxReactivosValle; user id=sa;password=Reactivos*delvalle123;Connection Timeout=10;persist security info=True;</property>-->
-    <property name="connection.connection_string">data source=144.126.151.13,19889; initial catalog=spxReactivosVallefff; user id=sa;password=sElectra69l#2023;Connection Timeout=10;persist security info=True;</property>
+    <property name="connection.connection_string">data source=181.206.7.48; initial catalog=spxReactivosValle; user id=sa;password=Reactivos*delvalle123;Connection Timeout=10;persist security info=True;</property>
+    <!--<property name="connection.connection_string">data source=144.126.151.13,19889; initial catalog=spxReactivosVallefff; user id=sa;password=sElectra69l#2023;Connection Timeout=10;persist security info=True;</property>-->
 
     <property name="show_sql">true</property>
     <property name="prepare_sql">false</property>
