--- a/Web2020/Web.config
+++ b/Web2020/Web.config
@@ -37,17 +37,17 @@
   <add name="spxConnectionString" connectionString="Data Source=144.126.151.13,19889;Initial Catalog=spxKuxan;Persist Security Info=True;User ID=sa;Password=sElectra69l@kux4n;TrustServerCertificate=True"
    providerName="System.Data.SqlClient" />
   <add name="SPControladoraDatos.Properties.Settings.SUPPORTECHConnectionString"
-   connectionString="Data Source=144.126.151.13,19889;Initial Catalog=spxKuxan;Persist Security Info=True;User ID=sa;Password=sElectra69l@kux4n;TrustServerCertificate=True"
+   connectionString="Data Source=144.126.151.13,19889;Initial Catalog=spxKuxan;Persist Security Info=True;User ID=sa;Password=sElectra69l@kux4n;Trust Server Certificate=True"
    providerName="System.Data.SqlClient" />
   <add name="SPControladoraDatos.Properties.Settings.supportechConnectionString1"
-   connectionString="Data Source=144.126.151.13,19889;Initial Catalog=spxKuxan;Persist Security Info=True;User ID=sa;Password=sElectra69l@kux4n;TrustServerCertificate=True"
+   connectionString="Data Source=144.126.151.13,19889;Initial Catalog=spxKuxan;Persist Security Info=True;User ID=sa;Password=sElectra69l@kux4n;Trust Server Certificate=True"
    providerName="System.Data.SqlClient" />
   <add name="SPControladoraDatos.Properties.Settings.wcg_coreConnectionString"
-   connectionString="Data Source=144.126.151.13,19889;Initial Catalog=spxKuxan;Persist Security Info=True;User ID=sa;Password=sElectra69l@kux4n;TrustServerCertificate=True"
+   connectionString="Data Source=144.126.151.13,19889;Initial Catalog=spxKuxan;Persist Security Info=True;User ID=sa;Password=sElectra69l@kux4n;Trust Server Certificate=True"
    providerName="System.Data.SqlClient" />
-  <add name="spx2020ConnectionString" connectionString="Data Source=144.126.151.13,19889;Initial Catalog=spxKuxan;User ID=sa;Password=sElectra69l@kux4n;TrustServerCertificate=True"
+  <add name="spx2020ConnectionString" connectionString="Data Source=144.126.151.13,19889;Initial Catalog=spxKuxan;User ID=sa;Password=sElectra69l@kux4n;Trust Server Certificate=True"
    providerName="System.Data.SqlClient" />
-  <add name="SUPPORTECHConnectionString" connectionString="Data Source=144.126.151.13,19889;Initial Catalog=spxKuxan;User ID=sa;Password=sElectra69l@kux4n;TrustServerCertificate=True"
+  <add name="SUPPORTECHConnectionString" connectionString="Data Source=144.126.151.13,19889;Initial Catalog=spxKuxan;User ID=sa;Password=sElectra69l@kux4n;Trust Server Certificate=True"
    providerName="System.Data.SqlClient" />
   <add name="spxKuxanConnectionString" connectionString="Data Source=144.126.151.13,19889;Initial Catalog=spxKuxan;User ID=sa;Password=sElectra69l@kux4n;Trust Server Certificate=True"
    providerName="System.Data.SqlClient" />
