solucion con problema de filtro estadistico

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,6 @@
 /Web2020/obj/Release/Web2020.csproj.AssemblyReference.cache
 /Web2020/Properties/PublishProfiles
 /Web2020/Web2020.csproj.user
+/SupportTech X/SPControladoraDatos/bin
+/SupportTech X/SPControladoraDatos/obj/Debug/SPControladoraDatos_MarkupCompile.cache
+/SupportTech/obj/Debug/SupportTech.csproj.AssemblyReference.cache
