se cambia query para listado de llamdas

--- a/SupportTech X/SPControladoraDatos/Properties/Settings.settings
+++ b/SupportTech X/SPControladoraDatos/Properties/Settings.settings
@@ -2,14 +2,6 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="SPControladoraDatos.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="SUPPORTECHConnectionString" Type="(Connection string)" Scope="Application">
-      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
-&lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Data Source=sql.kuxan.co,19889;Initial Catalog=spxjul1;Persist Security Info=True;User ID=sa;Password=sElectra69l;&lt;/ConnectionString&gt;
-  &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
-&lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=sql.kuxan.co,19889;Initial Catalog=spxjul1;Persist Security Info=True;User ID=sa;Password=sElectra69l;</Value>
-    </Setting>
     <Setting Name="usuarioAutenticado" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
@@ -21,20 +13,6 @@
     </Setting>
     <Setting Name="customTheme" Type="System.Drawing.Color" Scope="User">
       <Value Profile="(Default)">Silver</Value>
-    </Setting>
-    <Setting Name="supportechConnectionString1" Type="(Connection string)" Scope="Application">
-      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
-&lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Data Source=sql.kuxan.co,19889;Initial Catalog=spxjul1;Persist Security Info=True;User ID=sa;Password=sElectra69l;&lt;/ConnectionString&gt;
-&lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=sql.kuxan.co,19889;Initial Catalog=spxjul1;Persist Security Info=True;User ID=sa;Password=sElectra69l;</Value>
-    </Setting>
-    <Setting Name="wcg_coreConnectionString" Type="(Connection string)" Scope="Application">
-      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
-&lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Data Source=sql.kuxan.co,19889;Initial Catalog=spxjul1;Persist Security Info=True;User ID=sa;Password=sElectra69l;&lt;/ConnectionString&gt;
-&lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=sql.kuxan.co,19889;Initial Catalog=spxjul1;Persist Security Info=True;User ID=sa;Password=sElectra69l;</Value>
     </Setting>
     <Setting Name="eee" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
@@ -125,6 +103,28 @@
     </Setting>
     <Setting Name="tipoPropiedad" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="SUPPORTECHConnectionString" Type="(Connection string)" Scope="Application">
+      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;SerializableConnectionString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"&gt;
+  &lt;ConnectionString&gt;Data Source=144.126.151.13,19889;Initial Catalog=spxReactivosVallefff;Persist Security Info=True;User ID=sa;Password=sElectra69l#2023;&lt;/ConnectionString&gt;
+  &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
+&lt;/SerializableConnectionString&gt;</DesignTimeValue>
+      <Value Profile="(Default)">Data Source=144.126.151.13,19889;Initial Catalog=spxReactivosVallefff;Persist Security Info=True;User ID=sa;Password=sElectra69l#2023;</Value>
+    </Setting>
+    <Setting Name="supportechConnectionString1" Type="(Connection string)" Scope="Application">
+      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;SerializableConnectionString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"&gt;
+  &lt;ConnectionString&gt;Data Source=144.126.151.13,19889;Initial Catalog=spxReactivosVallefff;Persist Security Info=True;User ID=sa;Password=sElectra69l#2023;&lt;/ConnectionString&gt;
+&lt;/SerializableConnectionString&gt;</DesignTimeValue>
+      <Value Profile="(Default)">Data Source=144.126.151.13,19889;Initial Catalog=spxReactivosVallefff;Persist Security Info=True;User ID=sa;Password=sElectra69l#2023;</Value>
+    </Setting>
+    <Setting Name="wcg_coreConnectionString" Type="(Connection string)" Scope="Application">
+      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;SerializableConnectionString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"&gt;
+  &lt;ConnectionString&gt;Data Source=144.126.151.13,19889;Initial Catalog=spxReactivosVallefff;Persist Security Info=True;User ID=sa;Password=sElectra69l#2023;&lt;/ConnectionString&gt;
+&lt;/SerializableConnectionString&gt;</DesignTimeValue>
+      <Value Profile="(Default)">Data Source=144.126.151.13,19889;Initial Catalog=spxReactivosVallefff;Persist Security Info=True;User ID=sa;Password=sElectra69l#2023;</Value>
     </Setting>
   </Settings>
 </SettingsFile>
