--- a/SupportTech X/SPControladoraDatos/app.config
+++ b/SupportTech X/SPControladoraDatos/app.config
@@ -18,21 +18,108 @@
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup>
   <userSettings>
         <SPControladoraDatos.Properties.Settings>
-            <setting name="usuarioAutenticado" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="posicionCombo" serializeAs="String">
-                <value>0</value>
-            </setting>
-            <setting name="theme" serializeAs="String">
-                <value>0</value>
-            </setting>
-            <setting name="customTheme" serializeAs="String">
-                <value>Silver</value>
-            </setting>
-            <setting name="eee" serializeAs="String">
-                <value />
-            </setting>
+              <setting name="usuarioAutenticado" serializeAs="String">
+                    <value />
+              </setting>
+              <setting name="posicionCombo" serializeAs="String">
+                    <value>0</value>
+              </setting>
+              <setting name="theme" serializeAs="String">
+                    <value>0</value>
+              </setting>
+              <setting name="customTheme" serializeAs="String">
+                    <value>Silver</value>
+              </setting>
+              <setting name="eee" serializeAs="String">
+                    <value />
+              </setting>
+              <setting name="prioridadAlta" serializeAs="String">
+                    <value>Cornsilk</value>
+              </setting>
+              <setting name="esperaRespuesta" serializeAs="String">
+                    <value>192, 192, 255</value>
+              </setting>
+              <setting name="vencidasNivel1" serializeAs="String">
+                    <value>255, 255, 192</value>
+              </setting>
+              <setting name="vencidasNivel2" serializeAs="String">
+                    <value>255, 224, 192</value>
+              </setting>
+              <setting name="vencidasNivel3" serializeAs="String">
+                    <value>NavajoWhite</value>
+              </setting>
+              <setting name="limiteUno" serializeAs="String">
+                    <value>2</value>
+              </setting>
+              <setting name="limiteDos" serializeAs="String">
+                    <value>4</value>
+              </setting>
+              <setting name="limiteTres" serializeAs="String">
+                    <value>15</value>
+              </setting>
+              <setting name="notificacionesActivas" serializeAs="String">
+                    <value>True</value>
+              </setting>
+              <setting name="llegada" serializeAs="String">
+                    <value>True</value>
+              </setting>
+              <setting name="salida" serializeAs="String">
+                    <value>True</value>
+              </setting>
+              <setting name="modelo" serializeAs="String">
+                    <value>True</value>
+              </setting>
+              <setting name="tipoEquipo" serializeAs="String">
+                    <value>True</value>
+              </setting>
+              <setting name="subtipoEquipo" serializeAs="String">
+                    <value>True</value>
+              </setting>
+              <setting name="serial" serializeAs="String">
+                    <value>True</value>
+              </setting>
+              <setting name="cliente" serializeAs="String">
+                    <value>True</value>
+              </setting>
+              <setting name="ciudad" serializeAs="String">
+                    <value>True</value>
+              </setting>
+              <setting name="departamento" serializeAs="String">
+                    <value>True</value>
+              </setting>
+              <setting name="pais" serializeAs="String">
+                    <value>True</value>
+              </setting>
+              <setting name="ultimoMantenimiento" serializeAs="String">
+                    <value>True</value>
+              </setting>
+              <setting name="proximoMantenimiento" serializeAs="String">
+                    <value>True</value>
+              </setting>
+              <setting name="tipoServicio" serializeAs="String">
+                    <value>True</value>
+              </setting>
+              <setting name="observaciones" serializeAs="String">
+                    <value>True</value>
+              </setting>
+              <setting name="nitCliente" serializeAs="String">
+                    <value>True</value>
+              </setting>
+              <setting name="fabricante" serializeAs="String">
+                    <value>True</value>
+              </setting>
+              <setting name="estadoLocal" serializeAs="String">
+                    <value>True</value>
+              </setting>
+              <setting name="sucursal" serializeAs="String">
+                    <value>True</value>
+              </setting>
+              <setting name="numeroSocio" serializeAs="String">
+                    <value>True</value>
+              </setting>
+              <setting name="tipoPropiedad" serializeAs="String">
+                    <value>True</value>
+              </setting>
         </SPControladoraDatos.Properties.Settings>
 
     </userSettings>
