--- a/SupportTech X/SPControladoraDatos/app.config
+++ b/SupportTech X/SPControladoraDatos/app.config
@@ -8,12 +8,12 @@
 
     <connectionStrings>
         <add name="SPControladoraDatos.Properties.Settings.SUPPORTECHConnectionString"
-            connectionString="Data Source=144.126.151.13,19889;Initial Catalog=spxReactivosVallefff;Persist Security Info=True;User ID=sa;Password=sElectra69l#2023;"
+            connectionString="Data Source=31.220.98.160;Initial Catalog=spxjul1;User ID=sa;Password=sElectra69l@kux4n;Encrypt=False;TrustServerCertificate=True;"
             providerName="System.Data.SqlClient" />
         <add name="SPControladoraDatos.Properties.Settings.supportechConnectionString1"
-            connectionString="Data Source=144.126.151.13,19889;Initial Catalog=spxReactivosVallefff;Persist Security Info=True;User ID=sa;Password=sElectra69l#2023;" />
+            connectionString="Data Source=31.220.98.160;Initial Catalog=spxjul1;User ID=sa;Password=sElectra69l@kux4n;Encrypt=False;TrustServerCertificate=True;" />
         <add name="SPControladoraDatos.Properties.Settings.wcg_coreConnectionString"
-            connectionString="Data Source=144.126.151.13,19889;Initial Catalog=spxReactivosVallefff;Persist Security Info=True;User ID=sa;Password=sElectra69l#2023;" />
+            connectionString="Data Source=31.220.98.160;Initial Catalog=spxjul1;User ID=sa;Password=sElectra69l@kux4n;Encrypt=False;TrustServerCertificate=True;" />
     </connectionStrings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup>
   <userSettings>
